[package]
name = "thermite"
version = "0.1.0"
authors = ["Samuel","Patrick"]
edition = "2018"
license = "MIT"
description = "An attempt at spark-like in rust"
homepage = "https://github.com/swamulism/thermite"
repository = "https://github.com/swamulism/thermite"
readme = "README.md"

[dependencies]
tonic = "0.2.1"
